--- a/Index.html
+++ b/Index.html
@@ -16,11 +16,31 @@
         </p>
         <div class="box">
             <p>Elektronik , Schachspielen ,
-               Fittniss-Sport , Solarbootfahren
+               Fittniss-Sport , Solarbootfahren ,Salsmusik hören , Salsatanz
             </p>
         </div>
-        <img src="WIN_20240122_16_01_39_Pro.jpg" >
+        <img src="WIN_20240122_16_01_39_Pro.jpg"alt="Bildschirm mit Code" width="500px" height="200px" >
     </section>
-
+    <body>
+        <h1>Salsatanz</h1>
+        <!-- target="_blank" öffnet die Website in einen neuen Browser Tab -->
+        <a href="https://www.youtube.com/watch?app=desktop&v=t5YX-rPai1w" target="_blank">Klick hier(Video) !</a>
+    </body>
+    <header>
+        <h4>Welche lateinamekanische Musik git es und wo ist das jewalige Ursprungsland ? </h4>
+    <table>
+        <tr>
+            <th>Bachata</th>
+            <th>Kumbia</th>
+            <th>Merengue</th>
+        
+        <tr>
+            <td>Dominikanische Rep.</td>
+            <td>   Kolumbien</td>
+            <td>Dominikanische Rep.</td>
+        </tr>     
+        <h3>BACHATA Audio ! </h3>
+        <audio src="01! Bach 1.mp3" controls></audio>
+    </table>
 </body>
 </html>
