--- a/Index.html
+++ b/Index.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Einfache Webseite mit HTML</title>
-</head>
+    <title>ROLANDS Webseite HTML</title>
+
 <body>
     <header>
-        <h1>Hallo mein Name ist Roland</h1>
+        <h1>Hallo mein Name ist Roland</h1>        
     </header>
     <section>
-        <p>Ich bin 57 Jahre alt. Meine Hobbys stehen
-            in der Box.
-        </p>
+        <h1 style="color: rgb(47, 255, 85);" > Ich bin 57 Jahre alt. Meine Hobbys stehen
+            in der Box. </h1>
         <div class="box">
-            <p>Elektronik , Schachspielen ,
-               Fittniss-Sport , Solarbootfahren ,Salsmusik hören , Salsatanz
+            <p><div align="center">Elektronik , Schachspielen ,
+                     Fittniss-Sport , Solarbootfahren ,Salsmusik hören , Salsatanz
             </p>
+            <br>
+            
         </div>
         <img src="WIN_20240122_16_01_39_Pro.jpg"alt="Bildschirm mit Code" width="500px" height="200px" >
     </section>
@@ -42,5 +43,8 @@
         <h3>BACHATA Audio ! </h3>
         <audio src="01! Bach 1.mp3" controls></audio>
     </table>
-</body>
+
+
+<h1>zur nächste Seite</h1> 
+<a href="Rol.html">Zweite Seite</a> - ein Verweis zu einem Ziel in einer anderen Seite
 </html>
